--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <p id="paragrafI">
+    <p>
 <table>
         <thead>
             <td><img src="jean.png" width="100" id="slika"></td>
@@ -26,7 +26,17 @@
             </p>
 
 <br>
-<p ><h3>Obrazovanje:</h3>
+<br>
+<p > 
+    <h3 class="title"> <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    
+        <br>
+        Obrazovanje: </h3>
+        <br>
     <ul>
     <li>Završena: Osnovna Škola Ivan Goran Kovačić </li><br>
     <li>Pohađam: Srednju Strukovnu Školu Silvije Strahimir Kranjčević </li><br>
@@ -34,8 +44,18 @@
 </ul></p>
 <br>
 
-
-<p> <h3>Jezici:</h3>
+<br>
+<p> 
+    <h3 class="title"> 
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        
+            <br>
+             Jezici: </h3>
+             <br>
     <ul>
          <li>Hrvatski jezik &#11088; &#11088; &#11088; &#11088; &#11088; </li> <br>
             <li>Engleski jezik &#11088; &#11088; &#11088; &#11088; </li> <br>
@@ -46,26 +66,35 @@
         </p>
 
 <br>
+<br>
+<p> 
 
-<p>
-<h3>Vještine:
-</h3>
-<ul>
-<li>Slaganje rubikove kocke 3x3 i 2x2 </li> <br>
-<li>Rad u Photoshopu  </li> <br>
-<li>Izrada web stranica </li> <br>
+<h3 class="title"> <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <br>
+    Vještine: </h3>
+    <br>
+<table class="tablica">
+<thead >
+
+<tr class="tablica">
+    <td class="tablica">Slaganje rubikove kocke 3x3 &#11088;&#11088;&#11088;&#11088;&#11088;</td>
+    <td class="tablica">Slaganje rubikove kocke 2x2 &#11088;&#11088;&#11088;</td>
+</tr>
+<tr class="tablica">
+    <td class="tablica">Rad u photoshopu &#11088;&#11088;</td>
+    <td class="tablica"> HTML i CSS &#11088;&#11088;</td>
+
+</tr>
 
 
-</ul>
-
-
+</thead>
+</table>
 
 </p>
-
-
-
-
-
 
 </body>
 </html>
