--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@
 <thead >
 
 <tr class="tablica">
-    <td class="tablica">Slaganje rubikove kocke 3x3 &#11088;&#11088;&#11088;&#11088;&#11088;</td>
-    <td class="tablica">Slaganje rubikove kocke 2x2 &#11088;&#11088;&#11088;</td>
-</tr>
-<tr class="tablica">
-    <td class="tablica">Rad u photoshopu &#11088;&#11088;</td>
-    <td class="tablica"> HTML i CSS &#11088;&#11088;</td>
+    <td class="tablica">Slaganje rubikove kocke 3x3 &#11088;&#11088;&#11088;&#11088;&#11088; <br>
+        Slaganje rubikove kocke 2x2 &#11088;&#11088;&#11088;</td>
+ 
+
+    <td class="tablica">Rad u photoshopu &#11088;&#11088; <br>
+        HTML i CSS &#11088;&#11088;</td>
+ 
 
 </tr>
 
