--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>
 <table>
         <thead>
-            <td><img src="jean.png" width="100" id="slika"></td>
+            <td><img src="fa.png" width="100" id="slika"></td>
             
             <td>
                 <h3>Teodora Maros</h3> <br> 
